...
                android:text="Masukkan Email anda yang telah teregistrasi"
                android:layout_marginTop="180dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="230dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RESET PASSWORD"
                android:textStyle="bold"
                android:layout_marginTop="300dp"
                android:layout_centerHorizontal="true"
...
