<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.who.dcangs.Login">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="190dp"
                    android:textColor="#ff0000"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:hint="Email"
                    android:textColor="#000000"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="230dp"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:hint="Pasword"
                    android:textColor="#000000"
                    android:inputType="textPassword"
                    android:layout_marginTop="290dp"
                    android:layout_centerHorizontal="true"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:textStyle="bold"
                    android:background="#e9e3e3"
                    android:layout_marginTop="380dp"
                    android:layout_centerHorizontal="true"
                    android:onClick="OnLogin"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password?"
                    android:layout_marginTop="470dp"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:textColor="#000000"
                    android:layout_centerHorizontal="true"
                    android:onClick="onForgot" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/tvRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account?"
                        android:layout_marginTop="540dp" />

                    <TextView
                        android:id="@+id/tvRegister1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text=" REGISTER"
                        android:textColor="#000000"
                        android:layout="@+id/tvRegister"
                        android:layout_marginTop="540dp"
                        android:onClick="onRegister"/>

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>